--- a/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
+++ b/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
@@ -1403,7 +1403,7 @@
                                             <constraint firstAttribute="height" constant="1" id="x9D-wK-40s"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="床位号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ira-Si-mtX">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已服务" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ira-Si-mtX">
                                         <rect key="frame" x="20" y="12.666666666666673" width="42" height="19.666666666666671"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -1518,7 +1518,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nul-OH-9Vi">
-                                        <rect key="frame" x="109" y="22.666666666666657" width="140" height="0.0"/>
+                                        <rect key="frame" x="109" y="22.666666666666657" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1530,7 +1530,6 @@
                                     <constraint firstItem="nul-OH-9Vi" firstAttribute="centerY" secondItem="8X4-fA-cuA" secondAttribute="centerY" id="DaY-mX-Kon"/>
                                     <constraint firstAttribute="top" secondItem="rrv-rb-W2I" secondAttribute="bottom" id="Opf-g8-pN6"/>
                                     <constraint firstAttribute="trailing" secondItem="rrv-rb-W2I" secondAttribute="trailing" constant="19" id="Pv7-AR-DHV"/>
-                                    <constraint firstAttribute="trailing" secondItem="nul-OH-9Vi" secondAttribute="trailing" constant="40" id="TMu-9L-WLk"/>
                                     <constraint firstItem="Mf9-aK-pUf" firstAttribute="centerY" secondItem="8X4-fA-cuA" secondAttribute="centerY" id="lDH-wp-aFW"/>
                                     <constraint firstItem="Mf9-aK-pUf" firstAttribute="leading" secondItem="8X4-fA-cuA" secondAttribute="leading" constant="20" id="qzY-zN-tHT"/>
                                     <constraint firstItem="nul-OH-9Vi" firstAttribute="leading" secondItem="8X4-fA-cuA" secondAttribute="leading" constant="109" id="vhV-tq-CkY"/>
@@ -1554,7 +1553,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IkK-cp-NfP">
-                                        <rect key="frame" x="109" y="22.666666666666686" width="140" height="0.0"/>
+                                        <rect key="frame" x="109" y="22.666666666666686" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1565,7 +1564,6 @@
                                     <constraint firstItem="f5P-9L-mMu" firstAttribute="leading" secondItem="Lqx-FF-BOb" secondAttribute="leading" constant="20" id="5yA-4B-AnE"/>
                                     <constraint firstItem="RpJ-01-Fbl" firstAttribute="leading" secondItem="Lqx-FF-BOb" secondAttribute="leading" constant="19" id="AKu-Ao-l0z"/>
                                     <constraint firstAttribute="height" constant="45" id="B5C-rL-tSX"/>
-                                    <constraint firstAttribute="trailing" secondItem="IkK-cp-NfP" secondAttribute="trailing" constant="40" id="Lhz-Le-2xp"/>
                                     <constraint firstItem="f5P-9L-mMu" firstAttribute="centerY" secondItem="Lqx-FF-BOb" secondAttribute="centerY" id="TgJ-3A-Eo0"/>
                                     <constraint firstItem="IkK-cp-NfP" firstAttribute="centerY" secondItem="Lqx-FF-BOb" secondAttribute="centerY" id="cGW-wD-9ej"/>
                                     <constraint firstAttribute="top" secondItem="RpJ-01-Fbl" secondAttribute="bottom" id="cnH-Xc-M4G"/>
@@ -1616,11 +1614,11 @@
                     </view>
                     <size key="freeformSize" width="289" height="360"/>
                     <connections>
-                        <outlet property="bedNoLab" destination="xbr-ey-95K" id="0ss-pm-Cxb"/>
                         <outlet property="clockTypeLab" destination="AoP-0e-iS8" id="Uf6-WL-gSw"/>
                         <outlet property="downClockLab" destination="IkK-cp-NfP" id="75F-Vq-hd6"/>
                         <outlet property="projectNameLab" destination="yth-U5-Hap" id="afF-zd-vjn"/>
                         <outlet property="roomNameLab" destination="B2b-aQ-1Eg" id="AP7-Cb-ZPA"/>
+                        <outlet property="serviceDurationLab" destination="xbr-ey-95K" id="EjU-HH-ZrP"/>
                         <outlet property="upClockLab" destination="nul-OH-9Vi" id="ohb-Va-5tw"/>
                     </connections>
                 </viewController>
@@ -1942,7 +1940,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yna-fs-4nO">
                                 <rect key="frame" x="0.0" y="35" width="365" height="262"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HsD-Eo-tPq">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HsD-Eo-tPq">
                                         <rect key="frame" x="18" y="3" width="105" height="105"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="105" id="N1y-Ne-f5K"/>
