--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/Clockin(员工打卡)/LSViewClockInItemController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/Clockin(员工打卡)/LSViewClockInItemController.xib
@@ -12,19 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSViewClockInItemController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
                 <outlet property="clockBtn" destination="hVe-MF-hB6" id="lPi-GG-LnV"/>
-                <outlet property="clockDetailsView" destination="bZL-f7-eDN" id="poO-1s-hVA"/>
                 <outlet property="clockStatusLab" destination="Kc0-n1-qZU" id="0oZ-ys-F7r"/>
                 <outlet property="clockTipLab" destination="lpq-N1-ihM" id="6gk-4u-6Yz"/>
                 <outlet property="clockView" destination="wX7-hB-V5v" id="oIH-51-PjA"/>
                 <outlet property="contentView" destination="gmQ-L9-fZY" id="ThT-Kc-EWc"/>
                 <outlet property="currentAddressLab" destination="x6g-2D-gaK" id="geW-h0-tQB"/>
-                <outlet property="downClockLab" destination="33c-5g-ecB" id="URv-FT-bpf"/>
-                <outlet property="downClockView" destination="zfX-Ee-8Wl" id="Pv8-Pr-I7e"/>
                 <outlet property="storeAddressLab" destination="5K5-QY-fJL" id="w7T-EF-dAK"/>
+                <outlet property="tableView" destination="7Sd-Vk-Hnh" id="trf-GS-eix"/>
                 <outlet property="timeLab" destination="loh-uA-ZJ6" id="msA-kp-aTE"/>
-                <outlet property="upAddressLab" destination="DnP-B4-KSb" id="7bD-qg-rMs"/>
-                <outlet property="upClockView" destination="a3B-8v-qXo" id="qNc-m0-uao"/>
-                <outlet property="upTimeLab" destination="g1o-yA-5Qo" id="FTo-NB-D2a"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -34,7 +29,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gmQ-L9-fZY">
-                    <rect key="frame" x="10" y="74" width="373" height="744"/>
+                    <rect key="frame" x="10" y="74" width="373" height="778"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="定位获取中..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6g-2D-gaK">
                             <rect key="frame" x="15" y="20" width="343" height="19.333333333333329"/>
@@ -100,113 +95,23 @@
                             <color key="textColor" red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZL-f7-eDN">
-                            <rect key="frame" x="10" y="188" width="363" height="300"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a3B-8v-qXo">
-                                    <rect key="frame" x="24" y="39" width="8" height="8"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="8" id="Bh2-Pj-QvK"/>
-                                        <constraint firstAttribute="height" constant="8" id="kA8-7l-MZF"/>
-                                    </constraints>
-                                </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HiD-LO-CIb">
-                                    <rect key="frame" x="27.666666666666664" y="47" width="1" height="95"/>
-                                    <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="1" id="Ct6-4i-qUS"/>
-                                        <constraint firstAttribute="height" constant="95" id="lYY-mK-bhO"/>
-                                    </constraints>
-                                </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfX-Ee-8Wl">
-                                    <rect key="frame" x="24" y="142" width="8" height="8"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="8" id="FE6-qZ-Nnx"/>
-                                        <constraint firstAttribute="width" constant="8" id="zSj-6h-k2u"/>
-                                    </constraints>
-                                </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上班打卡" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xlq-qb-exK">
-                                    <rect key="frame" x="39" y="32" width="62" height="22"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="22" id="6UR-vS-89l"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="形状 20 拷贝" translatesAutoresizingMaskIntoConstraints="NO" id="IoR-n6-HsG">
-                                    <rect key="frame" x="39" y="66" width="11" height="11"/>
-                                </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="形状 1 拷贝" translatesAutoresizingMaskIntoConstraints="NO" id="i3i-23-TC3">
-                                    <rect key="frame" x="39" y="86" width="10" height="12"/>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1o-yA-5Qo">
-                                    <rect key="frame" x="60" y="63.666666666666686" width="33" height="16"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DnP-B4-KSb">
-                                    <rect key="frame" x="59" y="84" width="33" height="16"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="下班打卡" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33c-5g-ecB">
-                                    <rect key="frame" x="42" y="135" width="62" height="22"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="22" id="igm-z1-naf"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RWn-JB-QUF">
-                                    <rect key="frame" x="0.0" y="110" width="363" height="190"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                </view>
-                            </subviews>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="7Sd-Vk-Hnh">
+                            <rect key="frame" x="0.0" y="208" width="373" height="570"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstItem="RWn-JB-QUF" firstAttribute="leading" secondItem="bZL-f7-eDN" secondAttribute="leading" id="0j9-x6-1QX"/>
-                                <constraint firstItem="HiD-LO-CIb" firstAttribute="top" secondItem="a3B-8v-qXo" secondAttribute="bottom" id="4gm-Hf-Aey"/>
-                                <constraint firstItem="g1o-yA-5Qo" firstAttribute="centerY" secondItem="IoR-n6-HsG" secondAttribute="centerY" id="5iA-a9-88x"/>
-                                <constraint firstAttribute="trailing" secondItem="RWn-JB-QUF" secondAttribute="trailing" id="A9F-YE-DHD"/>
-                                <constraint firstItem="IoR-n6-HsG" firstAttribute="top" secondItem="Xlq-qb-exK" secondAttribute="bottom" constant="12" id="Ca7-S6-YOq"/>
-                                <constraint firstItem="i3i-23-TC3" firstAttribute="leading" secondItem="Xlq-qb-exK" secondAttribute="leading" id="DhR-en-OT2"/>
-                                <constraint firstItem="zfX-Ee-8Wl" firstAttribute="centerY" secondItem="33c-5g-ecB" secondAttribute="centerY" id="GSO-o9-gct"/>
-                                <constraint firstItem="33c-5g-ecB" firstAttribute="leading" secondItem="zfX-Ee-8Wl" secondAttribute="trailing" constant="10" id="ICK-NV-kCn"/>
-                                <constraint firstItem="RWn-JB-QUF" firstAttribute="top" secondItem="DnP-B4-KSb" secondAttribute="bottom" constant="10" id="OFp-f5-MQ8"/>
-                                <constraint firstItem="IoR-n6-HsG" firstAttribute="leading" secondItem="Xlq-qb-exK" secondAttribute="leading" id="OJy-yW-K1a"/>
-                                <constraint firstItem="Xlq-qb-exK" firstAttribute="centerY" secondItem="a3B-8v-qXo" secondAttribute="centerY" id="TBK-4d-aB0"/>
-                                <constraint firstItem="DnP-B4-KSb" firstAttribute="centerY" secondItem="i3i-23-TC3" secondAttribute="centerY" id="UAr-98-1m9"/>
-                                <constraint firstItem="Xlq-qb-exK" firstAttribute="leading" secondItem="a3B-8v-qXo" secondAttribute="trailing" constant="7" id="VsI-IQ-tqC"/>
-                                <constraint firstItem="zfX-Ee-8Wl" firstAttribute="centerX" secondItem="HiD-LO-CIb" secondAttribute="centerX" id="XFp-vG-uKu"/>
-                                <constraint firstItem="g1o-yA-5Qo" firstAttribute="leading" secondItem="IoR-n6-HsG" secondAttribute="trailing" constant="10" id="aEH-5f-Csd"/>
-                                <constraint firstItem="zfX-Ee-8Wl" firstAttribute="top" secondItem="HiD-LO-CIb" secondAttribute="bottom" id="eg4-w9-i7Q"/>
-                                <constraint firstItem="DnP-B4-KSb" firstAttribute="leading" secondItem="i3i-23-TC3" secondAttribute="trailing" constant="10" id="hLQ-81-ZEP"/>
-                                <constraint firstItem="a3B-8v-qXo" firstAttribute="top" secondItem="bZL-f7-eDN" secondAttribute="top" constant="39" id="kys-rV-YBC"/>
-                                <constraint firstAttribute="bottom" secondItem="RWn-JB-QUF" secondAttribute="bottom" id="lg5-vc-5qG"/>
-                                <constraint firstItem="a3B-8v-qXo" firstAttribute="leading" secondItem="bZL-f7-eDN" secondAttribute="leading" constant="24" id="pgn-aw-OQ8"/>
-                                <constraint firstAttribute="height" constant="300" id="qfi-eD-5CC"/>
-                                <constraint firstItem="HiD-LO-CIb" firstAttribute="centerX" secondItem="a3B-8v-qXo" secondAttribute="centerX" id="uFg-2w-53P"/>
-                                <constraint firstItem="i3i-23-TC3" firstAttribute="top" secondItem="IoR-n6-HsG" secondAttribute="bottom" constant="9" id="wS1-kf-Bi4"/>
-                            </constraints>
-                        </view>
+                        </tableView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="x6g-2D-gaK" secondAttribute="trailing" constant="15" id="0yu-PJ-YVj"/>
+                        <constraint firstAttribute="bottom" secondItem="7Sd-Vk-Hnh" secondAttribute="bottom" id="2lq-qJ-J8G"/>
                         <constraint firstItem="x6g-2D-gaK" firstAttribute="leading" secondItem="gmQ-L9-fZY" secondAttribute="leading" constant="15" id="7Cd-gc-y3A"/>
                         <constraint firstItem="lpq-N1-ihM" firstAttribute="centerX" secondItem="gmQ-L9-fZY" secondAttribute="centerX" id="8Ta-Jq-XpS"/>
-                        <constraint firstItem="bZL-f7-eDN" firstAttribute="leading" secondItem="gmQ-L9-fZY" secondAttribute="leading" constant="10" id="9U7-s9-Pt0"/>
                         <constraint firstItem="wX7-hB-V5v" firstAttribute="top" secondItem="5K5-QY-fJL" secondAttribute="bottom" constant="23" id="D3Z-VK-4nX"/>
+                        <constraint firstItem="7Sd-Vk-Hnh" firstAttribute="top" secondItem="lpq-N1-ihM" secondAttribute="bottom" constant="20" id="EcJ-Qs-gVg"/>
                         <constraint firstAttribute="trailing" secondItem="5K5-QY-fJL" secondAttribute="trailing" constant="15" id="Kos-BL-7hO"/>
                         <constraint firstItem="wX7-hB-V5v" firstAttribute="centerX" secondItem="gmQ-L9-fZY" secondAttribute="centerX" id="PH3-rK-w7h"/>
-                        <constraint firstItem="bZL-f7-eDN" firstAttribute="top" secondItem="lpq-N1-ihM" secondAttribute="bottom" id="PYr-Za-ZVo"/>
-                        <constraint firstAttribute="trailing" secondItem="bZL-f7-eDN" secondAttribute="trailing" id="RlX-F4-tPn"/>
+                        <constraint firstAttribute="trailing" secondItem="7Sd-Vk-Hnh" secondAttribute="trailing" id="Tqz-zJ-dOi"/>
+                        <constraint firstItem="7Sd-Vk-Hnh" firstAttribute="leading" secondItem="gmQ-L9-fZY" secondAttribute="leading" id="lPI-hi-eSp"/>
                         <constraint firstItem="x6g-2D-gaK" firstAttribute="top" secondItem="gmQ-L9-fZY" secondAttribute="top" constant="20" id="mdD-lg-NZE"/>
                         <constraint firstItem="5K5-QY-fJL" firstAttribute="top" secondItem="x6g-2D-gaK" secondAttribute="bottom" constant="3" id="xKo-eP-9fL"/>
                         <constraint firstItem="lpq-N1-ihM" firstAttribute="top" secondItem="wX7-hB-V5v" secondAttribute="bottom" constant="18" id="yzL-ig-967"/>
@@ -217,7 +122,7 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="gmQ-L9-fZY" secondAttribute="bottom" id="21S-OR-iVB"/>
+                <constraint firstAttribute="bottom" secondItem="gmQ-L9-fZY" secondAttribute="bottom" id="21S-OR-iVB"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gmQ-L9-fZY" secondAttribute="trailing" constant="10" id="BLc-WR-sbX"/>
                 <constraint firstItem="gmQ-L9-fZY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="Vxn-jx-svo"/>
                 <constraint firstItem="gmQ-L9-fZY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="dgT-3B-Kkd"/>
@@ -227,8 +132,6 @@
         </view>
     </objects>
     <resources>
-        <image name="形状 1 拷贝" width="10" height="12"/>
-        <image name="形状 20 拷贝" width="11" height="11"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
